--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "postcss": "^8.5.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "tailwindcss": "^4.1.11",
     "uuid": "^11.1.0"
   },
